--- a/dark.css
+++ b/dark.css
@@ -53,6 +53,7 @@ input[type="text"] {
   background-color: rgb(47, 51, 50);
 
   width: 218px;
+  text-align: right;
 }
 input[type="button"]:hover {
   background-color: rgb(160, 160, 160);
